# AuthKit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  field_sample.yml
.github/workflows/: ci.yml
assets/: README.md
docs/: FIELD_SAMPLE_REGRESSION.md  FOUNDATION_READINESS.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.4.0.md  SUPPORT_BUNDLE.md  WINDOWS_INSTALLER.md  diagnosis-cases.md
docs/articles/: juejin-authkit-codex-login-failure.md
docs/field_samples/: codex-proxy-mismatch.sample.json
scripts/: README.md  authkit-gui.cmd  build_icon.py  build_windows_installer.py  check.ps1  create-desktop-shortcut.cmd  create-desktop-shortcut.ps1  create_desktop_shortcut.py  field_repair_drill.py  field_sample_regression.py  foundation_audit.py  launch-gui.ps1  launch_gui.pyw  launch_gui.vbs  release_smoke.py
src/authkit/: __init__.py  __main__.py  brand.py  cli.py  clients.py  models.py  report.py  settings.py  shortcut.py
src/authkit/checks/: __init__.py  client.py  login.py  network.py  network_profile.py
src/authkit/core/: __init__.py  diagnose.py  scan.py
tests/: test_clients.py  test_diagnose_locale.py  test_fixer.py  test_fonts.py  test_i18n.py  test_login_status.py  test_network_profile.py  test_packaging.py  test_privileges.py  test_proxy.py  test_repair_audit.py  test_report.py  test_scan.py  test_settings.py  test_shortcut_script.py  test_ui_geometry.py  test_ui_rollback_preview.py
(+15 files in other folders)
